<resources>
    <string name="app_name">Foodie</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account? Sign up now</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">NEXT</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and new password below</string>
    <string name="preference_file_name">SharedPrefference\n</string>
    <string name="log_out">LOG OUT</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Update Password</string>
</resources>