<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".Forgot_Password">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="120dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:src="@drawable/foodie" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/enter_your_registered_mobile_number_and_email_below"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/mobile_number"
            app:boxStrokeColor="#33A4F5"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:endIconMode="clear_text"
            app:hintTextColor="#33A4F5"
            app:startIconDrawable="@drawable/baseline_call_24"
            app:startIconTint="#33A4F5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText"
                android:layout_width="match_parent"
                android:textColor="#000000"
                android:layout_height="match_parent"
                android:inputType="number"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/new_password"
            app:boxStrokeColor="#33A4F5"
            app:endIconMode="password_toggle"
            app:hintTextColor="#33A4F5"
            app:startIconDrawable="@drawable/baseline_lock_24"
            app:startIconTint="#33A4F5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText1"
                android:layout_width="match_parent"
                android:textColor="#000000"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="20dp"
            android:letterSpacing="0.2"
            android:background="#33A4F5"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </LinearLayout>

</LinearLayout>