<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".Register_Activity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/register_yourself"
                android:textColor="#33A4F5"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutName"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/name"
                app:boxStrokeColor="#33A4F5"
                app:endIconMode="clear_text"
                app:hintTextColor="#33A4F5"
                app:startIconDrawable="@drawable/baseline_person_24"
                app:startIconTint="#33A4F5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextName"
                    android:layout_width="match_parent"
                    android:textColor="#000000"
                    android:layout_height="match_parent"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/email"
                app:boxStrokeColor="#33A4F5"
                app:endIconMode="clear_text"
                app:hintTextColor="#33A4F5"
                app:startIconDrawable="@drawable/baseline_email_24"
                app:startIconTint="#33A4F5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextEmail"
                    android:layout_width="match_parent"
                    android:textColor="#000000"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutMobile"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/mobile_number"
                app:boxStrokeColor="#33A4F5"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconMode="clear_text"
                app:hintTextColor="#33A4F5"
                app:startIconDrawable="@drawable/baseline_call_24"
                app:startIconTint="#33A4F5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextMobile"
                    android:layout_width="match_parent"
                    android:textColor="#000000"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutAddress"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/address"
                app:boxStrokeColor="#33A4F5"
                app:hintTextColor="#33A4F5"
                app:startIconDrawable="@drawable/baseline_location_on_24"
                app:startIconTint="#33A4F5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextAddress"
                    android:layout_width="match_parent"
                    android:textColor="#000000"
                    android:layout_height="match_parent"
                   />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/password"
                app:boxStrokeColor="#33A4F5"
                app:endIconMode="password_toggle"
                app:hintTextColor="#33A4F5"
                app:startIconDrawable="@drawable/baseline_lock_24"
                app:startIconTint="#33A4F5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextPassword"
                    android:layout_width="match_parent"
                    android:textColor="#000000"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutConfirmPassword"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/confirm_password"
                app:boxStrokeColor="#33A4F5"
                app:endIconMode="password_toggle"
                app:hintTextColor="#33A4F5"
                app:startIconDrawable="@drawable/baseline_lock_24"
                app:startIconTint="#33A4F5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextCinfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#000000"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <view class="android.widget.ImageView"
                android:layout_height="200dp"
                android:layout_width="match_parent"/>


        </LinearLayout>


    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#33A4F5"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:letterSpacing="0.2"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>